<resources>
    <string name="app_name">Caixa Eletrônico</string>
    <string name="login">Login</string>
    <string name="infoLogin">Insira seus dados nos campos abaixo</string>
    <string name="agencia">Agência</string>
    <string name="conta">Conta</string>
    <string name="banco">Banco</string>
    <string name="senha">Senha</string>
    <string name="btnProsseguir">Prosseguir</string>
    <string name="saldo">Saldo</string>
    <string name="infoSaldo">"Insira os dados da conta e valor para sacar abaixo:"</string>
    <string name="moedaReal">R$</string>
    <string name="periodo">Selecione o período</string>
    <string name="dataInicial">Data Inicial</string>
    <string name="dataFinal">Data Final</string>
    <string name="atualizar">Atualizar</string>
    <string name="menu">Menu</string>
    <string name="infoMenu">Selecione uma das opções abaixo</string>
    <string name="extrato">Extrato</string>
    <string name="saque">Saque</string>
    <string name="valor">Valor</string>
</resources>
