<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:text="@string/menu"
        android:id="@+id/textViewMenu"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="25px"
        android:paddingTop="100px" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/infoMenu"
        android:id="@+id/textViewInfoMenu"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="100px" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extrato"
            android:id="@+id/buttonExtrato" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saque"
            android:id="@+id/buttonSaque" />
    </LinearLayout>
</LinearLayout>