<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.usjt.guilherme.caixaeletronico.MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:text="@string/login"
        android:id="@+id/textViewLogin"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/infoLogin"
        android:id="@+id/textViewInfo"
        android:layout_gravity="center_horizontal" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.89"
        android:gravity="center_vertical"
        android:nestedScrollingEnabled="false">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/banco"
                android:id="@+id/textView4"
                android:layout_column="1" />

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/editTextBanco"
                android:layout_column="2"
                android:editable="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/agencia"
                android:id="@+id/textViewAgencia"
                android:layout_column="1" />

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/editTextAgencia"
                android:layout_column="2"
                android:editable="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/conta"
                android:id="@+id/textViewConta"
                android:layout_column="1" />

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/editTextConta"
                android:layout_column="2"
                android:editable="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/senha"
                android:id="@+id/textView"
                android:layout_column="1" />

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/editTextSenha"
                android:layout_column="2"
                android:editable="true"
                android:inputType="textPassword" />
        </TableRow>

    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnProsseguir"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
